1999-06-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* converter.c: added a button to fetch the value under the
	cursor into converter.
	* gtkhex.c (gtk_hex_set_group_type): hide & show cursor.

1999-04-28  Ettore Perazzoli  <ettore@comm2000.it>

	* ghex.desktop: Added Italian translation.

1999-03-31  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c (hex_document_write): set changed to FALSE.
	
1999-03-25  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

        * gtkhex.c (gtk_hex_real_data_changed): don't bother to redraw
	anything if the area changed is not visible.
	* help/C/index.html: make it consistent with the application ;)

1999-03-24  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* preferences.c, main.c, config.c: add ability to use a custom
	format string for offset display.

1999-03-22  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c (find_string_backward): fixed it a bit to
	prevent occasional segfaults, since a guint can't really be
	less than 0.
	* findreplace.c (find_prev_cb): start searching at gh->cursor_pos
	instead of gh->cursor_pos-1 to comply with the above changes.

1999-03-10  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c (add_view_cb, cursor_moved_cb): new functions to
	display the cursor offset in the statusbar.
	(main): connect add_view_cb to MDI add_view signal.
	* ghex.h: declare offset_base.
	* preferences.c: add an option menu for selecting the base
	for cursor offset displaying (hex or decimal).
	* config.c: load and save offset base prefs.
	
1999-02-21  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c (hex_document_new): leave freeing stuff to
	destroy handler. thanx to Pavel Machek for reporting this.
	
1999-02-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c (hex_document_new): only create a new document
	if the file is a regular one (S_ISREG == 1).
	* gtkhex.c (recalc_displays, gtk_hex_size_request): use our own