@@ -1,3 +1,10 @@
+1999-06-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* gtkhex.[ch]: added option to show offset of each line in
+	a column on the left. complete rework of the cursor stuff.
+	* hex-document.c: enable offsets. should be made configurable
+	someday.
+
 1999-06-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* converter.c: added a button to fetch the value under the
